--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,43 @@
         app:layout_constraintGuide_percent="0.6"
         android:orientation="horizontal"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rcv_drop_point"
+    <LinearLayout
+        android:id="@+id/ll_booking_info"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:padding="10dp"
         app:layout_constraintTop_toTopOf="@id/horizontal_guide"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <TextView
+            android:id="@+id/first_date_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="1ST Date"/>
+
+        <TextView
+            android:id="@+id/first_time_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="1ST Time"/>
+
+        <TextView
+            android:id="@+id/second_date_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="2ND Date"/>
+
+        <TextView
+            android:id="@+id/second_time_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="2ND Time"/>
+
+    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_refresh"
