--- a/app/src/main/res/values/google_maps_api.xml
+++ b/app/src/main/res/values/google_maps_api.xml
@@ -20,5 +20,7 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB6UOmnpa0EGG-ZcirhkIOyrnY0UcEMBZM</string>
+    <string name="google_maps_key_old" templateMergeStrategy="preserve" translatable="false">AIzaSyB6UOmnpa0EGG-ZcirhkIOyrnY0UcEMBZM</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA7JVlVc6xllr-N1Q24BhUtsXDtD4OaQy4</string>
+
 </resources>
