--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,36 +28,75 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:padding="10dp"
+        android:orientation="vertical"
         app:layout_constraintTop_toTopOf="@id/horizontal_guide"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
-            android:id="@+id/first_date_txt"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="1ST Date"/>
+            android:gravity="center"
+            android:textStyle="bold"
+            android:text="Please Select pickup date and drop-off date."/>
 
-        <TextView
-            android:id="@+id/first_time_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="1ST Time"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/first_date_txt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:gravity="center"
+                android:text="1ST Date"/>
 
-        <TextView
-            android:id="@+id/second_date_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="2ND Date"/>
+            <TextView
+                android:id="@+id/first_time_txt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:gravity="center"
+                android:text="1ST Time"/>
 
-        <TextView
-            android:id="@+id/second_time_txt"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/second_date_txt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:gravity="center"
+                android:text="2ND Date"/>
+
+            <TextView
+                android:id="@+id/second_time_txt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:gravity="center"
+                android:text="2ND Time"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="2ND Time"/>
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Selected Pickup Point: "/>
+
+            <TextView
+                android:id="@+id/pickup_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Marina Bay Sands"/>
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
