--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,16 +86,16 @@
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="@string/no_pickup_selected"/>
-
     </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton
+    <Button
         android:id="@+id/fab_refresh"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        app:elevation="0dp"
+        android:layout_margin="16dp"
+        android:backgroundTint="@color/colorAccent"
+        android:text="Find Pickup Points"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
