--- a/app/src/main/res/layout/activity_booking_complete.xml
+++ b/app/src/main/res/layout/activity_booking_complete.xml
@@ -11,11 +11,12 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:gravity="center"
-        android:text="Booking ConFirmed!!"
+        android:text="@string/booking_confirm"
+        android:textStyle="bold"
         android:textColor="@android:color/white"
         android:textSize="25sp"/>
 
-    <TextView
+    <LinearLayout
         android:id="@+id/btn_to_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,9 +26,22 @@
         android:background="@drawable/rectangle_white"
         android:gravity="center"
         android:padding="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="PROCEED TO MAIN"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:textColor="@android:color/white"/>
+        app:layout_constraintBottom_toBottomOf="parent">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/proceed_to_main"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:textColor="@android:color/white"/>
+        <TextView
+            android:id="@+id/txt_countdown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="3"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:textColor="@android:color/white"/>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
